# permGPU

./: DESCRIPTION  MD5  NAMESPACE  NEWS  cleanup  configure  configure.ac
R/: test.permgpu.R  test.scoregpu.R
man/: makeExprSet.Rd  permGPU-package.Rd  permgpu.Rd  scoregpu.Rd  test.permgpu.Rd  test.scoregpu.Rd
src/: Makefile.in  permGPU.cu
